# rs-tables2pgcopy2zip

./: Cargo.toml  README.md  rs-tables2pgcopy2zip  run.sh
src/: lib.rs  main.rs
